# training-wheels

./: README.md  pyproject.toml
tests/: adapters.py  common.py  conftest.py  test_basic_tensor.py  test_dropout.py  test_lm.py  test_loss.py  test_nn_blocks.py  test_norm.py  test_optimizer.py
tests/_snapshots/: test_layernorm.npz  test_rmsnorm.npz
tests/fixtures/: cross_entropy_ground_truth.npy  cross_entropy_logits.npy  gelu_input.npy  layernorm_beta.npy  layernorm_input.npy  linear_input.npy  linear_weights.npy  relu_input.npy  rmsnorm_gamma.npy  rmsnorm_input.npy  softmax_input.npy  swiglu_input.npy  swiglu_output.npy  swiglu_w1_weight.npy  swiglu_w2_weight.npy  swiglu_w3_weight.npy
